--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "scripts": {
     "build": "rm -rf build/ && tsc",
     "cli": "yarn build && node build/cli.js",
-    "test": "yarn build && node --trace-warnings node_modules/.bin/jest --runInBand --no-cache --verbose --silent=false"
+
+    "test": "yarn build && node --trace-warnings node_modules/.bin/jest --runInBand --no-cache --verbose --silent=false",
+
+    "benchmark:iter": "yarn build && node build/benchmark/IterationBenchmark",
+    "benchmark:network": "yarn build && node build/benchmark/NetworkBenchmark"
   },
   "keywords": [
     "neuralnetwork",
